@@ -22,6 +22,7 @@ your needs, you can enable it very easily:
 
   # Basic, page-level caching
   class SimpleApp < Padrino::Application
+    register Padrino::Cache
     enable :caching
 
     get '/foo', :cache => true do
@@ -51,6 +52,10 @@ You can also cache on a controller-wide basis:
 
       get '/bar' do
         'Url is /admin/bar'
+      end
+
+      post '/baz' do # We cache only GET and HEAD request
+        'This will not be cached'
       end
     end
   end
@@ -253,7 +258,7 @@ You can manage your cache from anywhere in your app:
   set :cache, Padrino::Cache::Store::Memcache.new(::Dalli::Client.new('127.0.0.1:11211', :exception_retry_limit => 1))
   set :cache, Padrino::Cache::Store::Redis.new(::Redis.new(:host => '127.0.0.1', :port => 6379, :db => 0))
   set :cache, Padrino::Cache::Store::Memory.new(50)
-  set :cache, Padrino::Cache::Store::File.new(/tmp/cache) # default choice
+  set :cache, Padrino::Cache::Store::File.new(Padrino.root('tmp', app_name, 'cache') # default choice
 
 You can manage your cache from anywhere in your app:
 
