@@ -42,12 +42,15 @@ module Padrino
         #
         def cache(key, opts = nil, &block)
           if self.class.caching?
+            began_at = Time.now
             if value = self.class.cache.get(key.to_s)
               concat_content(value)
+              logger.debug "GET Fragment (%0.4fms) %s" % [Time.now-began_at, key.to_s] if defined?(logger)
             else
               value = capture_html(&block)
               self.class.cache.set(key.to_s, value, opts)
               concat_content(value)
+              logger.debug "SET Fragment (%0.4fms) %s" % [Time.now-began_at, key.to_s] if defined?(logger)
             end
           end
         end
